Kubernetes/Istio/manifests/next-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: next-service
  namespace: default
  labels:
    app: next
    tier: frontend
spec:
  type: ClusterIP
  selector:
    app: next
    tier: frontend
  # Note: We've removed version from the selector to include all versions
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
