Kubernetes/Istio/manifests/next-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: next-virtual-service
  namespace: default
spec:
  hosts:
  - "app.sieger.com.ng"
  gateways:
  - next-gateway
  http:
  - route:
    - destination:
        host: next-service
        subset: v1
        port:
          number: 80
      weight: 90
    - destination:
        host: next-service
        subset: v2
        port:
          number: 80
      weight: 10
